# parallel-image-edit

./: README.md
patchmatch/: CMakeLists.txt  Makefile  cleanup.sh  fake_omp.cpp  fake_omp.h  main.cpp  patchmatch.cpp  patchmatch.h  patchmatch_cuda.cu  performance.txt  retarget.cpp  retarget.h  util.h
patchmatch/cuda/: Makefile  main.cpp  old-Makefile  patchmatch-copy.txt  patchmatch.cu  patchmatch.h  util.cpp
patchmatch/halide/: Makefile  auto_schedule_generator.cpp  auto_schedule_run.cpp  main.cpp  resize.cpp
patchmatch/inc/: patchmatch.h  retarget.h
patchmatch/omp/: Makefile  main.cpp  patchmatch.cpp  patchmatch.h  util.h
patchmatch/seq/: Makefile  main.cpp  patchmatch.cpp  patchmatch.h  retarget.cpp
patchmatch/src/: main.cpp  patchmatch.cpp  retarget.cpp
poisson/cuda/: Makefile  PoissonImageEdit.cu
poisson/halide/: Makefile  PoissonAuto  PoissonAutoGenerator  PoissonImageEdit.cpp  PoissonImageEdit_GPU.cpp  PoissonImageEdit_Generator.cpp  PoissonImageEdit_Generator_Run.cpp  auto_schedule_false.h  auto_schedule_false.schedule.h  auto_schedule_true.h  auto_schedule_true.schedule.h
poisson/omp/: Makefile  PoissonImageEdit.cpp
poisson/seq/: CMakeLists.txt  PoissonImageEdit.cpp  main.cpp
